# aidlc-workflows-helper

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/cli/code/: code-summary.md
aidlc-docs/construction/plans/: cli-code-generation-plan.md
aidlc-docs/inception/plans/: execution-plan.md  story-generation-plan.md  user-stories-assessment.md
aidlc-docs/inception/requirements/: requirement-verification-questions.md  requirements.md
aidlc-docs/inception/user-stories/: personas.md  stories.md
src/: banner.rs  cache.rs  download.rs  extract.rs  github.rs  gitignore.rs  integrity.rs  main.rs  patch.rs  prompt.rs  ui.rs
