[package]
name = "aidlc-workflows-helper"
version = "0.1.0"
edition = "2024"
description = "CLI tool to install AI-DLC workflow rules into any project"
license = "MIT-0"
repository = "https://github.com/awslabs/aidlc-workflows-helper"

[dependencies]
anyhow = "1"
console = "0.16"
dialoguer = "0.12"
dirs = "6"
indicatif = "0.18"
reqwest = { version = "0.13", features = ["blocking", "rustls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
walkdir = "2"
zip = "7"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
opt-level = "z"
